# edman

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/edman-ce-adapter/: Cargo.toml  build.rs
crates/edman-ce-adapter/src/: installer.rs  lib.rs  main.rs  manifest.rs  native_messaging.rs
crates/edman-main/: Cargo.toml  build.rs
crates/edman-main/src/: ce_adapter.rs  config.rs  grpc.rs  main.rs  ui.rs
crates/edman-ui/: Cargo.toml  build.rs
crates/edman-ui/src/: files.rs  grpc.rs  icon.rs  loading.rs  main.rs
crates/edman-ui/src/page/: config.rs  mod.rs
crates/edman-ui/src/page/files/: mod.rs  tree.rs
crates/prisma-cli/: Cargo.toml
crates/prisma-codegen/: Cargo.toml  build.rs
crates/prisma-codegen/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  unix.rs  windows.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
extension/: .prettierignore  manifest.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
extension/src/: Messaging.ts  background.ts  content-script.ts  native.ts
prisma/: schema.prisma
prisma/migrations/20230825012855_add_db/: migration.sql
prisma/migrations/20230826104639_add_config/: migration.sql
proto/: chrome_extension.proto  config.proto  ui.proto
