[workspace]
resolver = "2"
members = [
  "crates/*"
]

[workspace.package]
version = "0.1.0"
description = ""
license = "MIT"
repository = "https://github.com/femshima/edman"
keywords = [""]
categories = [""]

rust-version = "1.65.0"

[workspace.dependencies]
tonic = "0.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
prost = "0.12"

utils = { path = "crates/utils" }
transport = { path = "crates/transport" }

[workspace.dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.9"
features = ["sqlite", "migrations"]
default-features = false

[workspace.dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.9"
features = ["sqlite", "migrations"]
default-features = false
