[package]
name = "edman-ce-adapter"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]

tokio.workspace = true
tonic.workspace = true
prost.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
byteorder = "1.4.3"

anyhow = "1.0"
cfg-if = "1.0.0"
typeshare = "1.0"

clap = { version = "4.4", features = ["derive"] }

directories = "5.0.1"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
typeshare-core = { version = "1.7.0" }
glob = "0.3.1"
