[package]
name = "edman-main"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
transport.workspace = true

directories = "5.0.1"

prisma-codegen = { path = "../prisma-codegen" }
prisma-client-rust.workspace = true

[build-dependencies]
tokio-test = "0.4.3"
tonic-build = { version = "0.10", features = ["prost"] }
