[package]
name = "edman-ui"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true

iced = { "version" = "0.10", "features" = [ "wgpu", "advanced"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
