[package]
name = "edman-ui"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
transport.workspace = true

strum = "0.25"
strum_macros = "0.25"

iced = { "version" = "0.10", "features" = [ "wgpu", "tokio"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
