[package]
name = "prisma-cli"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
prisma-cli = ["prisma-client-rust-cli"]

[[bin]]
name = "prisma-cli"
required-features = ["prisma-cli"]

[dependencies]
prisma-client-rust.workspace = true
prisma-client-rust-cli = { workspace = true, optional = true }
