[package]
name = "prisma-codegen"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prisma-client-rust.workspace = true

serde = { version = "1.0", features = ["derive"] }
