[package]
name = "transport"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true

utils.workspace = true

directories = "5.0.1"

tower = "0.4"
http = "0.2"

tokio-stream = { version = "0.1", features = ["net"] }
